# maqxt

./: CMakeLists.txt  FindMaqxt.cmake  README.md  Readme.txt
core/: maqxtglobal.h
maqxt/core/: maqxtglobal.cpp
maqxt/gui/: maqxtglobalshortcut.cpp  maqxtglobalshortcut.h  maqxtglobalshortcut_mac.cpp  maqxtglobalshortcut_p.h
